--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.3.1",
   "description": "MuleSoft Agent Fabric UI - Conversational Interface with MuleSoft Broker Integration",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx serve -s dist -l $PORT",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
